<resources>
    <string name="app_name">时刻</string>
    <string name="recording_today">记录今日</string>
    <string name="title">标题</string>
    <string name="choose_weather">选择天气</string>
    <string name="camera">相机</string>
    <string name="pictures">图库</string>
    <string name="canvas">画板</string>
    <string name="recording">录音</string>
    <string name="text_num_count">字数统计</string>
    <string name="delete">删除</string>
    <string name="select">选择</string>
    <string name="location_info">位置信息</string>
    <string name="text_content_num">%d字</string>
    <string name="currentPicture">%d/%d</string>
    <string name="key_world_search">关键字搜索</string>
    <string name="new_dairy">创建日记</string>
    <string name="calendar_icon">日历图标</string>
    <string name="cancer">取消</string>
    <string name="back">返回</string>
    <string name="beauty_around_you">记   录   身   边   的   美   好   !</string>
    <string name="start_recording">开始记录</string>
    <string name="help">帮助</string>
    <string name="setting">设置</string>
    <string name="daily_plan">分类</string>
    <string name="recycle">回收</string>
    <string name="love">日记本</string>
    <string name="about">关于</string>
    <string name="secret">密码锁</string>
    <string name="countdown_day">日历</string>
    <string name="loading">加载中…</string>
    <string name="all_select">全选</string>
    <string name="alreadySelect">已选%d个</string>
    <string name="filter">筛选</string>
    <string name="to_do_type">待办类型</string>
    <string name="select_to_do">请选择待办事项</string>
    <string name="inputToDoHint">请输入办理事项内容进行记录保存!</string>
    <string name="todo_num">%d/300字</string>
    <string name="not_complete_num">未完成(%d项)</string>
    <string name="complete_num">已完成(%d项)</string>
    <string name="set_love">设为喜爱</string>
    <string name="set_private">设为私密</string>
    <string name="delete_all">全部删除</string>
    <string name="complete">完成</string>
    <string name="customize_background">自定义背景</string>
    <string name="album_select_complete">完成(%d/9)</string>
    <string name="add_note_book_num">%d/5</string>
    <string name="favorites_remind">点击可进行编辑,长按拖动排序删除</string>
    <string name="diary_edit">记录</string>

    <!--    共享元素name-->
    <string name="home_activity_share_bar">share_bar</string>

    <!--    首次进入的日记-->
    <string name="first_dairy_title">时刻</string>
    <string name="first_dairy_content">欢迎使用时刻，您的专属私密日记本。\n\n在一本日记中，您可以方便的图文记录每日日常。日记只有您本人能够查看，安全的云同步保护您的数据不会丢失。\n\n时刻支持添加:\n1.纯文字日记;\n2.多张图片;\n3.手绘图画。\n丰富的日记形式丰富您的每一次记录。\n\n您还可以对日记进行详细的分类，添加标签，便于未来更好地回忆整理。\n丰富的背景图让您的日记更加多彩。\n更多贴心功能等待您的体验。\n\nhttps://www.pgyer.com/HkJI</string>
    <string name="dairy_end">END</string>
    <string name="open_link">打开链接</string>
    <string name="recording_file_name">recording_file</string>
</resources>