<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.tw.longerrelationship.viewmodel.ToDoEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_todo_select"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_todo_type"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/to_do_type"
            android:textColor="@color/black_weak"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_select_todo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/select_to_do"
            android:textColor="@color/selectTodo"
            app:layout_constraintBottom_toBottomOf="@id/tv_todo_type"
            app:layout_constraintEnd_toStartOf="@+id/iv_arrow_down"
            app:layout_constraintTop_toTopOf="@id/tv_todo_type" />

        <ImageView
            android:id="@+id/iv_arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_todo_type"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_todo_type" />

        <View
            android:id="@+id/divider_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/toDoEditDivider"
            app:layout_constraintTop_toBottomOf="@id/tv_todo_type" />

        <EditText
            android:id="@+id/et_todo"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_todo_edit"
            android:gravity="top"
            android:hint="@string/inputToDoHint"
            android:maxLength="300"
            android:padding="10dp"
            android:text="@={viewModel.todoContent}"
            android:textColor="@color/EditText"
            android:textCursorDrawable="@drawable/shape_edit_cursor"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/divider_line" />

        <TextView
            android:id="@+id/tv_content_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@{viewModel.contentNum}"
            android:textColor="@color/textNum"
            app:layout_constraintBottom_toTopOf="@id/content_hold"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/content_hold"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/et_todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>